<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_halls"
            android:icon="@drawable/ic_tiket"
            android:title="@string/action_halls"/>
        <item
            android:id="@+id/nav_usb_valid"
            android:icon="@drawable/ic_tiket"
            android:title="@string/action_rental"/>
    </group>
    <item android:title="@string/service">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_white"
                    android:title="@string/action_settings"/>
            </group>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_white"
                android:title="@string/action_exit"/>
        </menu>
    </item>

</menu>
